logic of the clicker game

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 </head>
 <body>
     <header>
-        <h1>Clicer Cookie</h1>
+        <h1>Clicker Cookie</h1>
     </header>
     <main>
         <section class="cookieJar">
             <img src="img/bank.png" alt="Cookie jar">
         </section>
          <section class="game">
-            <img src="img/cookieStart.png" alt="Cookie">
+            <img class="imgCookie" src="img/cookieStart.png" alt="Cookie">
             <button class="btn">Start</button>
         </section>
         <section class="statistics">
             <p>
                 Click:
             </p>
-            <span>0</span>
+            <span class="click">0</span>
             <p>
                 Сlicks per second:
             </p>
-            <span> 0</span>
+            <span class="speed"> 0</span>
         </section>
     </main>
-    
+    <script src="index.js"></script>
 </body>
 </html>
