fixed bugs and added the best speed parameter
исправила ошибку что при рестарте не обнулялись клики и скорость, и добавила лучшую скорость

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Click:
             </p>
             <span class="click">0</span>
-            <p>
+            <p class="speedText">
                 Сlicks per second:
             </p>
             <span class="speed"> 0</span>
